--- a/development/backend/Dockerfile
+++ b/development/backend/Dockerfile
@@ -5,5 +5,6 @@ COPY package.json package-lock.json ./
 RUN mkdir file
 RUN mkdir file/static
 RUN npm ci
+ENV NODE_ENV=production
 
 ENTRYPOINT ["node", "src/index.js"]
