--- a/development/backend/Dockerfile
+++ b/development/backend/Dockerfile
@@ -2,6 +2,8 @@ FROM node:12-alpine
 WORKDIR /backend
 COPY src/ ./src
 COPY package.json package-lock.json ./
+RUN npm i compression
+
 RUN mkdir file
 RUN mkdir file/static
 RUN npm ci
