--- a/development/mysql/custom.conf
+++ b/development/mysql/custom.conf
@@ -1,6 +1,8 @@
 [mysqld]
 loose-local-infile=1
 character-set-server=utf8mb4
+innodb_buffer_pool_size=5G
+
 slow_query_log = 1
 slow_query_log_file = /var/log/mysql/slow.log
 long_query_time = 0
