confちょい変更

--- a/development/mysql/Dockerfile
+++ b/development/mysql/Dockerfile
@@ -8,5 +8,4 @@ RUN tar zxvf 3.0.5-test.tar.gz
 RUN ./percona-toolkit-3.0.5-test/bin/pt-query-digest --version
 RUN mv ./percona-toolkit-3.0.5-test/bin/pt-query-digest /usr/local/bin/pt-query-digest
 
-
-CMD ["mysqld"]
+CMD ["mysqld", "--innodb-log-file-size=512M"]
