--- a/development/mysql/custom.conf
+++ b/development/mysql/custom.conf
@@ -1,9 +1,11 @@
 [mysqld]
 loose-local-infile=1
 character-set-server=utf8mb4
+innodb_buffer_pool_size=4G
+
 slow_query_log = 1
 slow_query_log_file = /var/log/mysql/slow.log
-long_query_time = 0
+long_query_time = 2
 
 [client]
 loose-local-infile=1
